plugins {
	id 'org.springframework.boot' version '2.2.5.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id 'idea'
}

group = 'com.eventstore.training'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '8'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'io.vavr:vavr:0.10.2'

	implementation 'com.eventstore:db-client-java:1.0.0'

	implementation "com.google.protobuf:protobuf-java:3.12.1"

	implementation platform('io.grpc:grpc-bom:1.29.0')
	implementation "io.grpc:grpc-netty-shaded"
	implementation "io.grpc:grpc-stub"
	implementation "io.grpc:grpc-protobuf"


	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')

	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'

	testCompileOnly 'org.projectlombok:lombok:1.18.22'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}
